<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_easy" 
        android:onClick="launchGame" 
        android:tag="1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_classic" 
        android:onClick="launchGame"
        android:tag="2"/>

    <Button
        android:id="@+id/Button01"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_hard"
        android:onClick="launchGame"
        android:tag="3"/>

    <Button
        android:id="@+id/Button02"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_back"
        android:onClick="back" />

</LinearLayout>
