<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameLinearLayout"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/gameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_timer"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="30sp" />
    
    <GridView
	    android:id="@+id/gameGrid"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:columnWidth="0dp"
	    android:verticalSpacing="0dp"
	    android:horizontalSpacing="0dp"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	/>
    
    <LinearLayout
        android:orientation="horizontal" 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp">
    	
        <TextView
	        android:id="@+id/gameFlag"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_gravity="left"
	        android:gravity="left"
	        android:text="@string/game_flag_number"
	        android:textSize="20sp" />
    
 		<TextView
	        android:id="@+id/gameHighScore"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="15dp"
	        android:gravity="right"
	        android:layout_gravity="right"
	        android:text="@string/game_high_score"
	        android:textSize="20sp" />
        
    </LinearLayout>    

   	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center|bottom"
	    android:orientation="vertical" >

        <Button
	        android:id="@+id/buttonPause"
	        android:layout_width="300dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="15dp"
	        android:text="@string/button_pause" 
	        android:onClick="pauseGame" 
	        android:tag="1"/>
	</LinearLayout>
    
    
	<!--<TableLayout
		 	android:id="@+id/gameLayout" 
			android:layout_width="fill_parent"
	   		android:layout_height="fill_parent"
	    	android:stretchColumns="1">
		    
		</TableLayout> -->

</LinearLayout>
